--- a/unaspmobile/apps/unaspmobile/common/css/main.css
+++ b/unaspmobile/apps/unaspmobile/common/css/main.css
@@ -109,11 +109,15 @@ body {
 	width: 100%
 }
 
-.ui-grid-d li img {
+.botoes-menu li img {
 	width: 50px;
 	height: auto;
 	display: block;
 	margin: 0 auto;
+}
+
+.troca_back{
+	
 }
 
 .ui-header .ui-title,.ui-footer .ui-title {
@@ -346,3 +350,27 @@ height:100%;
 		padding-right: 15px;
 	}
 }
+
+.effect  {
+	top: -1px;
+	position: absolute;
+	-webkit-transition: 0.7s ease-in-out;
+	-moz-transition: 0.7s ease-in-out;
+	-o-transition: 0.7s ease-in-out;
+	-ms-transition: 0.7s ease-in-out;
+	transition: 0.7s ease-in-out;
+	width: 65px;
+	height: 7px;
+	background: #e06c05;
+	left: 20%;
+	
+	}
+	
+	..botoes-menu li a img:nth-child(1):hover ~ .effect {
+	  left: 12.5%; }
+	.nav a:nth-child(2):hover ~ .effect {
+	  left: 37.5%; }
+	.nav a:nth-child(3):hover ~ .effect {
+	  left: 62.5%; }
+	.nav a:nth-child(4):hover ~ .effect {
+	  left: 87.5%; }
