--- a/unaspmobile/apps/unaspmobile/common/css/main.css
+++ b/unaspmobile/apps/unaspmobile/common/css/main.css
@@ -12,26 +12,37 @@ body {
 	-moz-box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.75);
 	box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.75);
 }
-.loadMobile{
+
+.loadMobile {
 	display: none;
 	margin: 10%;
 }
 
-.loadMobile img{
-width: 10em;
-display: block;
-margin: auto;
-}
-.loadMobile h3{
-	text-align: center;
-	color: rgb(202, 202, 202);
-	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0 /*{a-page-shadow-radius}*/ #110A0A /*{a-page-shadow-color}*/;
+.loadMobile img,#ajax-loader img {
+	display: block;
+	margin: auto;
 }
 
-.danger{
-		background-color: #CC4646;
+.loadMobile img{
+	width: 10em;
 }
-.alert{
+
+#ajax-loader img {
+	width: 3em;
+}
+
+.loadMobile h3 {
+	text-align: center;
+	color: rgb(202, 202, 202);
+	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0
+		/*{a-page-shadow-radius}*/ #110A0A /*{a-page-shadow-color}*/;
+}
+
+.danger {
+	background-color: #CC4646;
+}
+
+.alert {
 	background-color: #333;
 }
 
